force-app/main/default/objects/MessagingSession/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company input value from Pre-Chat form</description>
    <inlineHelpText>Company input value from Pre-Chat form</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>