force-app/main/default/objects/MessagingSession/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Messaging Session Department owner</description>
    <inlineHelpText>Messaging Session Department owner</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>