force-app/main/default/objects/MessagingSession/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>((EndTime - StartTime) * 24 * 60)</formula>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>