force-app/main/default/objects/MessagingSession/fields/Omni_Role__c.field-meta.xml
<CustomField>
    <fullName>Omni_Role__c</fullName>
    <label>Omni Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>