force-app/main/default/objects/MessagingSession/fields/Session_Owner__c.field-meta.xml
<CustomField>
    <fullName>Session_Owner__c</fullName>
    <formula>IF(BEGINS(OwnerId, &quot;005&quot;), Owner:User.Full_Name__c,  Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Owner</label>
    <type>Text</type>
</CustomField>