force-app/main/default/objects/MessagingSession/fields/Survey_Email__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email__c</fullName>
    <description>Email used in alert for chat csat survey</description>
    <label>Survey Email</label>
    <type>Email</type>
</CustomField>