force-app/main/default/objects/MessagingSession/listViews/Agentforce_Testing_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Agentforce_Testing_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Agentforce Testing Queue</label>
    <queue>Agentforce_Testing_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>