force-app/main/default/objects/MessagingSession/listViews/CO_Messaging_Sessions.listView-meta.xml
<ListView>
    <fullName>CO_Messaging_Sessions</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Omni_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelName</field>
        <operation>equals</operation>
        <value>Omni Messaging - CO</value>
    </filters>
    <label>CO Messaging Sessions</label>
</ListView>