force-app/main/default/objects/MessagingSession/listViews/Omni_Client_Onboarding_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Omni_Client_Onboarding_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Omni_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelName</field>
        <operation>equals</operation>
        <value>Omni Messaging,Login Help</value>
    </filters>
    <label>CE Messaging Sessions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>